Fix layout issue in widgets.

--- a/client/components/widget/widget-directive.css
+++ b/client/components/widget/widget-directive.css
@@ -15,6 +15,7 @@
   background: #ffffff;
   border: 1px solid #CCC;
   margin: 15px;
+  width: 100%;
 }
 
 .pk-widget-body.pk-widget-no-overflow {
